Added more info

--- a/Exploring.ipynb
+++ b/Exploring.ipynb
@@ -47,7 +47,9 @@
     "    - nconst (string) - alphanumeric unique identifier of the name/person\n",
     "    - category (string) - the category of job that person was in\n",
     "    - job (string) - the specific job title if applicable, else '\\N'\n",
-    "    - characters (string) - the name of the character played if applicable, else '\\N'"
+    "    - characters (string) - the name of the character played if applicable, else '\\N'\n",
+    "    \n",
+    "These files are essentially all of the IMDb data so the unzipped files are HUGE! Therefore, I included them in my .gitignore file."
    ]
   },
   {
@@ -12496,7 +12498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ac1e93",
+   "id": "60db1dc4",
    "metadata": {},
    "source": [
     "# IMDb Wiki Table concat\n",
