--- a/Exploring.ipynb
+++ b/Exploring.ipynb
@@ -13273,7 +13273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "id": "9832d44d",
    "metadata": {
     "scrolled": true
@@ -14827,7 +14827,13 @@
       "['tt1642373', 'tt1811323']\n",
       "Michael O'Donoghue tt0840371\n",
       "['tt1642373', 'tt1811323', 'tt0840371']\n",
-      "Dennis Miller tt0119277\n",
+      "Dennis Miller tt0119277\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['tt0119277']\n",
       "Chris Elliott tt0972846\n",
       "['tt0972846']\n",
@@ -14960,13 +14966,7 @@
       "Michael O'Donoghue tt0133302\n",
       "['tt0133302']\n",
       "Michael O'Donoghue tt1626811\n",
-      "['tt0133302', 'tt1626811']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['tt0133302', 'tt1626811']\n",
       "Michael O'Donoghue tt0115355\n",
       "['tt0133302', 'tt1626811', 'tt0115355']\n",
       "Michael O'Donoghue tt0120801\n",
@@ -15884,9 +15884,7 @@
    "cell_type": "code",
    "execution_count": 62,
    "id": "6f292444",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -27279,7 +27277,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "50367b14",
+   "id": "23c063bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31005,7 +31003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b61769",
+   "id": "b9e40e31",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31013,7 +31011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c977e140",
+   "id": "c7073051",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31021,7 +31019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee3b3675",
+   "id": "6637db88",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31029,7 +31027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62a75be",
+   "id": "901acd65",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31037,7 +31035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c8260f",
+   "id": "335c95e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31045,7 +31043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3de21ba",
+   "id": "1c2d6929",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31053,7 +31051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5ba3d50",
+   "id": "c0f4d3a4",
    "metadata": {},
    "outputs": [],
    "source": []
