--- a/wiki_scrape.ipynb
+++ b/wiki_scrape.ipynb
@@ -2,14 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 153,
    "id": "b0ac67ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd # library for data analysis\n",
     "import requests # library to handle requests\n",
+    "import bs4\n",
     "from bs4 import BeautifulSoup # library to parse HTML documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "ee14b68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.11.1'"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bs4.__version__"
    ]
   },
   {
@@ -31870,7 +31892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe734e4",
+   "id": "0817e8b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31878,7 +31900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23120524",
+   "id": "7310c522",
    "metadata": {},
    "outputs": [],
    "source": []
