--- a/SNL_Final.ipynb
+++ b/SNL_Final.ipynb
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "fb20d107",
    "metadata": {},
    "outputs": [],
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "41c385de",
    "metadata": {
     "scrolled": false
@@ -1884,12 +1884,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cb6531d58c74d64b2874de2844d677f",
+       "model_id": "1377d08f1bf047db97389aee2f919b3d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(Label(value=''), Figure(axes=[Axis(label='SNL Cast Member', label_offset='115px'…"
+       "HBox(children=(VBox(children=(Label(value='Robert Downey Jr.: 1 seasons on SNL'), Figure(axes=[Axis(label='SNL…"
       ]
      },
      "metadata": {},
